sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:5: error: not found: value getNombreValeurs
  for(i<-1 to getNombreValeurs()-1){
              ^DutchFlagAlgo:6: error: not found: value getValeur
    v = getValeur(i)
        ^DutchFlagAlgo:8: error: not found: value getValeur
    while( k>=1 &&getValeur(k-1)>v){setValeur(k,getValeur(k-1));k+= -1;}
                  ^DutchFlagAlgo:8: error: not found: value setValeur
    while( k>=1 &&getValeur(k-1)>v){setValeur(k,getValeur(k-1));k+= -1;}
                                    ^DutchFlagAlgo:8: error: not found: value getValeur
    while( k>=1 &&getValeur(k-1)>v){setValeur(k,getValeur(k-1));k+= -1;}
                                                ^DutchFlagAlgo:9: error: not found: value setValeur
    setValeur(k,v);
    ^